# rosclaw-lekiwi-ros2-mcp

./: README.md  launch_rosclaw_lekiwi.sh  pyproject.toml
config/: mcp_config.json
specs/: lekiwi_scene.xml
specs/lekiwi/: lekiwi.xml
specs/so_arm101/: so_arm101.xml
src/: lekiwi_digital_twin_viewer.py  lekiwi_mcp_server.py
tests/: conftest.py  test_kinematics.py  test_lekiwi_mcp.py
