[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rosclaw-lekiwi-ros2-mcp"
version = "0.1.0"
description = "ROSClaw MCP Server for LeKiwi Mobile Base + SO-101 Arm via ROS2"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "robotics", "lekiwi", "so101", "ros2", "feetech", "mobile-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[fastmcp]>=1.0.0",
    "numpy>=1.24.0",
    "rosclaw-so101-ros2-mcp>=0.1.0",
]

[project.optional-dependencies]
ros2 = [
    # rclpy is installed via ROS2 distribution
    # source /opt/ros/humble/setup.bash
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
rosclaw-lekiwi-mcp = "lekiwi_mcp_server:main"

[project.urls]
Homepage = "https://github.com/ros-claw/rosclaw-lekiwi-ros2-mcp"
Repository = "https://github.com/ros-claw/rosclaw-lekiwi-ros2-mcp"
Issues = "https://github.com/ros-claw/rosclaw-lekiwi-ros2-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
